# ska-software-updates-notifier

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
files/: config.yaml.sample  sun.service
src/: config.py  prometheus.py  sun.py  updates.py
